workday/12.0/modules/ROOT/pages/workday-connector-xml-maven.adoc
= Workday XML and Maven Support - Mule 4
:page-aliases: connectors::workday/workday-xml-ref.adoc, connectors::workday/workday-connector-xml-maven.adoc

If you manually code a Mule app in XML either from the Anypoint Studio XML editor or from a text editor, you can get access to Workday in your app by adding reference statements to your XML Mule flow and in the Apache Maven `pom.xml` file.

[NOTE]
====
When you install the Workday Connector in Anypoint Studio, Studio automatically populates
the XML code with the Workday Connector namespace and schema location, and adds a
dependency to the `pom.xml` file.
====

== Add a Namespace for the Connector

Paste the following code inside the `mule` tag of the header
of your configuration XML:

[source,xml,linenums]
----
http://www.mulesoft.org/schema/mule/workday
http://www.mulesoft.org/schema/mule/workday/current/mule-workday.xsd
----

This example shows how the namespace statements are placed in the XML:

[source,xml,linenums]
----
<mule xmlns:$2="http://www.mulesoft.org/schema/mule/$2"
	xmlns:ee="http://www.mulesoft.org/schema/mule/ee/core"
	xmlns:http="http://www.mulesoft.org/schema/mule/http"
	xmlns:file="http://www.mulesoft.org/schema/mule/file"
	xmlns="http://www.mulesoft.org/schema/mule/core"
	xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://www.mulesoft.org/schema/mule/core
	http://www.mulesoft.org/schema/mule/core/current/mule.xsd
	http://www.mulesoft.org/schema/mule/file
	http://www.mulesoft.org/schema/mule/file/current/mule-file.xsd
	http://www.mulesoft.org/schema/mule/http
	http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
	http://www.mulesoft.org/schema/mule/ee/core
	http://www.mulesoft.org/schema/mule/ee/core/current/mule-ee.xsd
	http://www.mulesoft.org/schema/mule/$2
	http://www.mulesoft.org/schema/mule/$2/current/mule-$2.xsd">
----


== Add a POM File Dependency

The `pom.xml` Maven file generated by Anypoint Studio contains dependencies for
a Mule app. When you code a Mule app manually, include this XML snippet in
your `pom.xml` file to enable access to the connector.

[source,xml,linenums]
----
<dependency>
  <groupId>com.mulesoft.connectors</groupId>
  <artifactId>mule-workday-connector</artifactId>
  <version>12.0.0</version>
  <classifier>mule-plugin</classifier>
</dependency>
----

To obtain the most up-to-date `pom.xml` file information:

. Go to https://www.mulesoft.com/exchange/[Anypoint Exchange].
. In Exchange, click *Login* and supply your Anypoint Platform username and password.
. In Exchange, search for `Workday`.
. Click *Dependency Snippets*.

To obtain the most up-to-date `pom.xml` file information, access the
connector in https://www.mulesoft.com/exchange/[Anypoint Exchange]
and click *Dependency Snippets*.

== Next Step

After completing your namespace and `pom.xml` file, you can try
the xref:workday-connector-examples.adoc[Examples].

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* https://help.mulesoft.com[MuleSoft Help Center]
