workday/13.0/modules/ROOT/pages/workday-connector-xml-maven.adoc
= Workday Connector 13.0 XML and Maven Support - Mule 4
:page-aliases: connectors::workday/workday-xml-ref.adoc, connectors::workday/workday-connector-xml-maven.adoc

Although you can manually code a Mule app in XML, it is more efficient to use Anypoint Studio:

* If you manually code a Mule runtime engine (Mule) app in XML, either from the Anypoint Studio XML editor or from a text editor, you can access the connector from your app by adding reference statements to both your XML Mule flow and the Apache Maven `pom.xml` file.

* If you add the connector in Studio, Studio automatically populates the XML code with the connector's namespace and schema location and it also adds a dependency to the `pom.xml` file.

== Add a Namespace for the Connector

Paste the following code inside the `mule` tag of the header
of your configuration XML:

[source,xml,linenums]
----
http://www.mulesoft.org/schema/mule/workday
http://www.mulesoft.org/schema/mule/workday/current/mule-workday.xsd
----

This example shows how the namespace statements are placed in the XML:

[source,xml,linenums]
----
<mule xmlns:$2="http://www.mulesoft.org/schema/mule/workday"
	xmlns:ee="http://www.mulesoft.org/schema/mule/ee/core"
	xmlns:http="http://www.mulesoft.org/schema/mule/http"
	xmlns:file="http://www.mulesoft.org/schema/mule/file"
	xmlns="http://www.mulesoft.org/schema/mule/core"
	xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://www.mulesoft.org/schema/mule/core
	http://www.mulesoft.org/schema/mule/core/current/mule.xsd
	http://www.mulesoft.org/schema/mule/file
	http://www.mulesoft.org/schema/mule/file/current/mule-file.xsd
	http://www.mulesoft.org/schema/mule/http
	http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
	http://www.mulesoft.org/schema/mule/ee/core
	http://www.mulesoft.org/schema/mule/ee/core/current/mule-ee.xsd
	http://www.mulesoft.org/schema/mule/workday
	http://www.mulesoft.org/schema/mule/workday/current/mule-workday.xsd">
----

== Remove Warning On Every Http Call

Workday Connector is logging the following warning message on every http call:

[source,xml,linenums]
----
WARN  2020-11-10 10:51:57,494 [[MuleRuntime].uber.12: [workday].workdayFlow.BLOCKING @766054e8] [processor: ; event: 5ec7a670-233a-11eb-a099-f018989d247f] com.ning.http.client.RequestBuilderBase: Value was null, set to ""
----

In order to remove this warning from console in Anypoint Studio, update `src/main/resources/log4j2.xml` with the following line of code
[source,xml,linenums]
----
<AsyncLogger name="com.ning.http.client.RequestBuilderBase" level="ERROR"/>
----

== Add a POM File Dependency

The Apache Maven `pom.xml` file generated by Anypoint Studio contains dependencies for a Mule app. If you code a Mule app manually, include this XML snippet in your `pom.xml` file to enable access to this connector:

[source,xml,linenums]
----
<dependency>
  <groupId>com.mulesoft.connectors</groupId>
  <artifactId>mule-workday-connector</artifactId>
  <version>x.x.x</version>
  <classifier>mule-plugin</classifier>
</dependency>
----

Replace `x.x.x` with the version that corresponds to the connector you are using.

To obtain the most up-to-date `pom.xml` file information:

. Go to https://www.mulesoft.com/exchange/[Anypoint Exchange].
. In Exchange, click *Login* and supply your Anypoint Platform username and password.
. In Exchange, search for `workday`.
. Click *Dependency Snippets* near the upper right of the screen.

== Next Step

After completing your namespace and `pom.xml` file, you can try
the xref:workday-connector-examples.adoc[Examples].

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* https://help.mulesoft.com[MuleSoft Help Center]
